INCLUDE_DIRECTORIES(${BOOST_INC_DIR})
LINK_DIRECTORIES (${BOOST_LIB_DIR})

INCLUDE_DIRECTORIES(${OSG_INC_DIR})
LINK_DIRECTORIES (${OSG_LIB_DIR})

INCLUDE_DIRECTORIES(${LUA_INC_DIR})
LINK_DIRECTORIES (${LUA_LIB_DIR})

ADD_SUBDIRECTORY(ModuleLoader)
ADD_SUBDIRECTORY(sgtLuna)
ADD_SUBDIRECTORY(lua_core)
ADD_SUBDIRECTORY(lunagen)

# ADD_SUBDIRECTORY(template_launcher)
