INCLUDE_DIRECTORIES(${BOOST_INC_DIR})
LINK_DIRECTORIES (${BOOST_LIB_DIR})

INCLUDE_DIRECTORIES(${OSG_INC_DIR})
LINK_DIRECTORIES (${OSG_LIB_DIR})

INCLUDE_DIRECTORIES(${LUA_INC_DIR})
LINK_DIRECTORIES (${LUA_LIB_DIR})

ADD_SUBDIRECTORY(ModuleLoader)
ADD_SUBDIRECTORY(sgtLuna)
ADD_SUBDIRECTORY(sgtCore)

ADD_SUBDIRECTORY(lua_core)
ADD_SUBDIRECTORY(lua_tests)

ADD_SUBDIRECTORY(plug_lfs)
ADD_SUBDIRECTORY(plug_core)

ADD_SUBDIRECTORY(plug_doxmlparser)
ADD_SUBDIRECTORY(plug_lpeg)

# ADD_SUBDIRECTORY(plug_osg)
# ADD_SUBDIRECTORY(plug_wx)

ADD_SUBDIRECTORY(plug_iconv)

ADD_SUBDIRECTORY(plug_gl)
ADD_SUBDIRECTORY(plug_opengl)
ADD_SUBDIRECTORY(plug_osgWX)

ADD_SUBDIRECTORY(sgtLauncher)

ADD_SUBDIRECTORY(ork)
ADD_SUBDIRECTORY(proland)

ADD_SUBDIRECTORY(plug_land)

# ADD_SUBDIRECTORY(template_launcher)
