SET(TARGET_NAME "core")

INCLUDE_DIRECTORIES(../sgtLuna/include)

ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp" )

GENERATE_LUA_PACKAGE(SOURCE_FILES ${PROJECT_SOURCE_DIR}/modules/core/)	

ADD_LIBRARY (${TARGET_NAME}_pack SHARED ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${TARGET_NAME}_pack sgtLuna)

SET_TARGET_PROPERTIES(${TARGET_NAME}_pack PROPERTIES 
	OUTPUT_NAME "${TARGET_NAME}"
	PREFIX ""
	IMPORT_PREFIX "plug_"
	SUFFIX ".lpak")
