SET(PLUG_NAME "core")
SET(TARGET_NAME "pack_${PLUG_NAME}")
SET(TARGET_DIR "./packages")

INCLUDE_DIRECTORIES(../sgtLuna/include)

ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)

# FILE(GLOB_RECURSE SOURCE_FILES "*.cpp" )

SET(SOURCE_FILES "")

GENERATE_LUA_PACKAGE(SOURCE_FILES ${PROJECT_SOURCE_DIR}/modules/core/ bind_core)	
GENERATE_LUA_PACKAGE(SOURCE_FILES ${PROJECT_SOURCE_DIR}/modules/externals/ bind_externals)	

ADD_LIBRARY (${TARGET_NAME} SHARED ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${TARGET_NAME} sgtLuna)

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES 
	OUTPUT_NAME "${PLUG_NAME}"
	PREFIX ""
	IMPORT_PREFIX "plug_"
	SUFFIX ".lpak")

INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})

COMPRESS_BINARY()
