

INCLUDE_DIRECTORIES(${PYTHON27_INC_DIR})
LINK_DIRECTORIES (${PYTHON27_LIB_DIR})

add_subdirectory(src)

# Building the lua module for python:
SET(TARGET_NAME lua)
SET(TARGET_DIR "./python27/DLLs")

ADD_LIBRARY(${TARGET_NAME} MODULE $<TARGET_OBJECTS:src>)
if (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
  SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES 
                            PREFIX ""
                            SUFFIX ".pyd")
else ()
  SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES 
                            PREFIX "")
endif ()

TARGET_LINK_LIBRARIES(${TARGET_NAME} ${LUA_LIBS} ${PYTHON27_LIBS})

INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})

COMPRESS_BINARY()



# building the python module for lua:
SET(PLUG_NAME "python")
SET(TARGET_NAME "plug_${PLUG_NAME}")
SET(TARGET_DIR "./modules")

ADD_LIBRARY(${TARGET_NAME} MODULE $<TARGET_OBJECTS:src> src/python.def)
SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES 
  OUTPUT_NAME "${PLUG_NAME}"
  PREFIX ""
  IMPORT_PREFIX "plug_"
  SUFFIX ".sgp")

TARGET_LINK_LIBRARIES(${TARGET_NAME} ${LUA_LIBS} ${PYTHON27_LIBS})

INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})

COMPRESS_BINARY()


