SET(TARGET_NAME "proland")
SET(TARGET_DIR "./")

# INCLUDE_DIRECTORIES(../../sgtLuna/include)
INCLUDE_DIRECTORIES(../ork/libraries)
INCLUDE_DIRECTORIES(../ork)
INCLUDE_DIRECTORIES(${PTHREADS_INC_DIR})

INCLUDE_DIRECTORIES(core/sources)

ADD_DEFINITIONS("-D_CRT_SECURE_NO_WARNINGS" "-DTIXML_USE_STL")

ADD_DEFINITIONS("-DORK_API=__declspec(dllimport)")
ADD_DEFINITIONS("-DPROLAND_API=__declspec(dllexport)")

FILE(GLOB_RECURSE PUBLIC_HEADERS "core/sources/*.h")

FILE(GLOB_RECURSE SOURCE_FILES "core/sources/*.cpp" )

# ADD_MSVC_PRECOMPILED_HEADER("kernel.h" "kernel.cpp" SOURCE_FILES)

ADD_LIBRARY (${TARGET_NAME} SHARED ${PUBLIC_HEADERS} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${TARGET_NAME} ork)

INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})

COMPRESS_BINARY()


