SET(TARGET_NAME "proland")
SET(TARGET_DIR "./")

add_definitions(-DNDEBUG)

INCLUDE_DIRECTORIES(../sgtLuna/include)
INCLUDE_DIRECTORIES(../ork/libraries)
INCLUDE_DIRECTORIES(../ork)

INCLUDE_DIRECTORIES(${PTHREADS_INC_DIR})
LINK_DIRECTORIES(${PTHREADS_LIB_DIR})

INCLUDE_DIRECTORIES(${GLEW_INC_DIR})
LINK_DIRECTORIES(${GLEW_LIB_DIR})

INCLUDE_DIRECTORIES(${GLUT_INC_DIR})
LINK_DIRECTORIES(${GLUT_LIB_DIR})

INCLUDE_DIRECTORIES(${ATB_INC_DIR})
LINK_DIRECTORIES(${ATB_LIB_DIR})

ADD_SUBDIRECTORY(sources)
# ADD_SUBDIRECTORY(examples)

