SET(TARGET_NAME "ModuleLoader")

INCLUDE_DIRECTORIES (../include)

ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(-DMODULELOADER_LIBRARY)

FILE(GLOB_RECURSE PUBLIC_HEADERS "../include/*.h")

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp" )

ADD_MSVC_PRECOMPILED_HEADER("ModuleLoader.h" "ModuleLoader.cpp" SOURCE_FILES)

ADD_LIBRARY (${TARGET_NAME} SHARED ${PUBLIC_HEADERS} ${SOURCE_FILES} "MemoryModule.c")

TARGET_LINK_LIBRARIES(${TARGET_NAME} ${FLAVOR_LIBS})
