SET(TARGET_NAME "cef_process")
SET(TARGET_DIR ".")

INCLUDE_DIRECTORIES(${CEF_INC_DIR})
LINK_DIRECTORIES (${CEF_LIB_DIR})

ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp")

ADD_EXECUTABLE (${TARGET_NAME} WIN32 ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${TARGET_NAME} ${CEF_LIBS})

INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})

COMPRESS_BINARY()
