SET(TARGET_NAME "cef_process")
SET(TARGET_DIR ".")

INCLUDE_DIRECTORIES(../include)

INCLUDE_DIRECTORIES(${CEF_INC_DIR})
LINK_DIRECTORIES (${CEF_LIB_DIR})

ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)

set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")

if(MSVC)
  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:MSVCRT") #/NODEFAULTLIB:LIBCMT
endif()

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp")

ADD_EXECUTABLE (${TARGET_NAME} WIN32 ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${TARGET_NAME} ${CEF_LIBS_MT})

INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})

COMPRESS_BINARY()
