SET(TARGET_NAME "lunagen_kernel")

INCLUDE_DIRECTORIES (../include)
INCLUDE_DIRECTORIES(../../sgtLuna/include)

ADD_DEFINITIONS(-DCXX_ENABLED)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)

FILE(GLOB_RECURSE PUBLIC_HEADERS "../include/*.h")

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp" )

ADD_MSVC_PRECOMPILED_HEADER("kernel.h" "kernel.cpp" SOURCE_FILES)

GENERATE_LUA_PACKAGE(SOURCE_FILES)

ADD_LIBRARY (${TARGET_NAME} SHARED ${PUBLIC_HEADERS} ${SOURCE_FILES} "kernel.def")

TARGET_LINK_LIBRARIES(${TARGET_NAME} sgtLuna)
