SET(PLUG_NAME "doxmlparser")
SET(TARGET_NAME "plug_${PLUG_NAME}")

INCLUDE_DIRECTORIES (../include)
INCLUDE_DIRECTORIES (../../sgtLuna/include)
INCLUDE_DIRECTORIES (qtools)

ADD_DEFINITIONS(-DPLUG_LIBRARY)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)

# ADD_DEFINITIONS(-DQT_LARGEFILE_SUPPORT)
ADD_DEFINITIONS(-DQT_LITE_UNICODE)

FILE(GLOB_RECURSE PUBLIC_HEADERS "../include/*.h")

FILE(GLOB_RECURSE SOURCE_FILES "parser/*.cpp" "qtools/*.cpp" "luna/*.cpp")

ADD_MSVC_PRECOMPILED_HEADER("plug_common.h" "plug_common.cpp" SOURCE_FILES)

IF(WIN32)
    FILE(GLOB_RECURSE SPECIFIC_SOURCE_FILES "win32/*.cpp")
ELSE()
    FILE(GLOB_RECURSE SPECIFIC_SOURCE_FILES "unix/*.cpp")
ENDIF()

ADD_LIBRARY (${TARGET_NAME} SHARED ${PUBLIC_HEADERS} ${SPECIFIC_SOURCE_FILES} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${TARGET_NAME} sgtLuna)  

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES 
    OUTPUT_NAME "${PLUG_NAME}"
    PREFIX ""
    SUFFIX ".sgp")

# step needed for the generation of the XML documentation:
SET(INTF_FILES)
ADD_FILES(INTF_FILES "../include/doxmlintf.h")
ADD_FILES(INTF_FILES "../interface/helpers.h")

GENERATE_REFLECTION(${TARGET_NAME} INTF_FILES)

# INSTALL_PDB(${TARGET_NAME} "modules/")

