SET(PLUG_NAME "iconv")
SET(TARGET_NAME "plug_${PLUG_NAME}")
SET(TARGET_DIR "./modules")

INCLUDE_DIRECTORIES(../include)

INCLUDE_DIRECTORIES(${ICONV_INC_DIR})
LINK_DIRECTORIES (${ICONV_LIB_DIR})

ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)

ADD_LIBRARY (${TARGET_NAME} SHARED luaiconv.c luaiconv.def)

TARGET_LINK_LIBRARIES(${TARGET_NAME} ${LUA_LIBS} ${ICONV_LIBS})  

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES 
	OUTPUT_NAME "${PLUG_NAME}"
	PREFIX ""
	SUFFIX ".sgp")

INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})

COMPRESS_BINARY()
