SET(PLUG_NAME "land")
SET(TARGET_NAME "plug_${PLUG_NAME}")
SET(TARGET_DIR "./modules")
#SET(TARGET_DIR "bin/${FLAVOR}/modules")


INCLUDE_DIRECTORIES (../include)
INCLUDE_DIRECTORIES (../../sgtLuna/include)

INCLUDE_DIRECTORIES(../../ork)
INCLUDE_DIRECTORIES(../../ork/libraries)

#INCLUDE_DIRECTORIES(${MYDEP_INC_DIR})
#LINK_DIRECTORIES (${MYDEP_LIB_DIR})

LINK_DIRECTORIES (${GLEW_LIB_DIR})
LINK_DIRECTORIES (${GLUT_LIB_DIR})
LINK_DIRECTORIES (${PTHREADS_LIB_DIR})

ADD_DEFINITIONS(-DPLUG_LIBRARY)
ADD_DEFINITIONS(-DLUNA_BINDINGS)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ADD_DEFINITIONS("-DTIXML_USE_STL" "-D_CRT_SECURE_NO_WARNINGS")
ADD_DEFINITIONS(${OSG_FLAGS})

add_definitions("-DORK_API=__declspec(dllimport)")

FILE(GLOB_RECURSE PUBLIC_HEADERS "../include/*.h")

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp" )

ADD_MSVC_PRECOMPILED_HEADER("plug_common.h" "plug_common.cpp" SOURCE_FILES)

ADD_LIBRARY (${TARGET_NAME} SHARED ${PUBLIC_HEADERS} ${SOURCE_FILES} )

TARGET_LINK_LIBRARIES(${TARGET_NAME} sgtCore ${LUA_LIBS} ${OSG_LIBS} ${GL_LIBS} ork)

INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})

# reflection settings:	
SET(INTF_FILES)

# LIST(APPEND INTF_FILES "${MYDEP_INC_DIR}")
LIST(APPEND INTF_FILES "${PROJECT_SOURCE_DIR}/sources/ork/ork")
# LIST(APPEND INTF_FILES "${PROJECT_SOURCE_DIR}/sources/ork/ork/core")
# LIST(APPEND INTF_FILES "${PROJECT_SOURCE_DIR}/sources/ork/ork/math")
# LIST(APPEND INTF_FILES "${PROJECT_SOURCE_DIR}/sources/ork/ork/render")
# LIST(APPEND INTF_FILES "${PROJECT_SOURCE_DIR}/sources/ork/ork/util")
# LIST(APPEND INTF_FILES "${PROJECT_SOURCE_DIR}/sources/ork/ork/resource")
# LIST(APPEND INTF_FILES "${PROJECT_SOURCE_DIR}/sources/ork/ork/taskgraph")
# LIST(APPEND INTF_FILES "${PROJECT_SOURCE_DIR}/sources/ork/ork/scenegraph")
# LIST(APPEND INTF_FILES "${PROJECT_SOURCE_DIR}/sources/ork/ork/ui")
ADD_FILES(INTF_FILES "../include/plug_extensions.h")
ADD_FILES(INTF_FILES "../interface/helpers.h")

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES 
	OUTPUT_NAME "${PLUG_NAME}"
	PREFIX ""
	SUFFIX ".sgp")

SET(DOXY_PREDEFINED ORK_API NDEBUG TIXML_USE_STL) 
SET(FILE_PATTERNS "*.h")
SET(INCLUDE_PATH "../../ork")

GENERATE_REFLECTION(${TARGET_NAME} INTF_FILES)

# misc operations:
COMPRESS_BINARY()
#INSTALL_PDB(${TARGET_NAME} "modules/")
