SET(PLUG_NAME "lfs")
SET(TARGET_NAME "plug_${PLUG_NAME}")
SET(TARGET_DIR "./modules")

INCLUDE_DIRECTORIES(../include)

ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)

ADD_LIBRARY (${TARGET_NAME} SHARED lfs.c ../include/lfs.h lfs.def)

TARGET_LINK_LIBRARIES(${TARGET_NAME} ${LUA_LIBS})  

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES 
	OUTPUT_NAME "${PLUG_NAME}"
	PREFIX ""
	SUFFIX ".sgp")

INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})

COMPRESS_BINARY()
