SET(PLUG_NAME "lpeg")
SET(TARGET_NAME "plug_${PLUG_NAME}")

INCLUDE_DIRECTORIES(../include)

ADD_LIBRARY (${TARGET_NAME} SHARED lpeg.c lpeg.def ../include/lpeg.h)

TARGET_LINK_LIBRARIES(${TARGET_NAME} ${LUA_LIBS})  

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES 
	OUTPUT_NAME "${PLUG_NAME}"
	PREFIX ""
	SUFFIX ".sgp")
