SET(PLUG_NAME "osg")
SET(TARGET_NAME "plug_${PLUG_NAME}")
SET(TARGET_DIR "./modules")

INCLUDE_DIRECTORIES (../include)
INCLUDE_DIRECTORIES (../../sgtLuna/include)

ADD_DEFINITIONS(-DPLUG_LIBRARY)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(${OSG_FLAGS})

FILE(GLOB_RECURSE PUBLIC_HEADERS "../include/*.h")

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp" )

ADD_MSVC_PRECOMPILED_HEADER("plug_common.h" "plug_common.cpp" SOURCE_FILES)

ADD_LIBRARY (${TARGET_NAME} SHARED ${PUBLIC_HEADERS} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${TARGET_NAME} sgtLuna ${OSG_LIBS} ${LUA_LIBS} ${GL_LIBS})  
	
# step needed for the generation of the XML documentation:
SET(INTF_FILES)
LIST(APPEND INTF_FILES "${OSG_INC_DIR}")
ADD_FILES(INTF_FILES "../interface/helpers.h")
ADD_FILES(INTF_FILES "../include/plug_extensions.h")

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES 
  OUTPUT_NAME "${PLUG_NAME}"
	PREFIX ""
	IMPORT_PREFIX "plug_"
	SUFFIX ".sgp")

IF(MSVC)
SET(DOXY_PREDEFINED _MSC_VER OSG_EXPORT OSGUTIL_EXPORT OSGDB_EXPORT OSGGA_EXPORT OSGTEXT_EXPORT OSGVIEWER_EXPORT OSGPARTICLE_EXPORT GL_APIENTRY=  OSG_USE_REF_PTR_IMPLICIT_OUTPUT_CONVERSION) 
ELSE()
SET(DOXY_PREDEFINED OSG_EXPORT OSGUTIL_EXPORT OSGDB_EXPORT OSGGA_EXPORT OSGTEXT_EXPORT OSGVIEWER_EXPORT OSGPARTICLE_EXPORT GL_APIENTRY=  OSG_USE_REF_PTR_IMPLICIT_OUTPUT_CONVERSION) 
#OSG_USE_FLOAT_BOUNDINGSPHERE OSG_USE_FLOAT_BOUNDINGBOX
ENDIF()

SET(FILE_PATTERNS */OpenThreads/* */osg/* */osgUtil/* */osgDB/* */osgGA/* */osgText/* */osgViewer/* */osgParticle/*)
SET(INCLUDE_PATH ${OSG_INC_DIR})
SET(EXPAND_AS_DEFINED META_Object META_Node META_StateAttribute META_NodeVisitor META_Shape )

GENERATE_REFLECTION(${TARGET_NAME} INTF_FILES)

# INSTALL_PDB(${TARGET_NAME} "modules/")

INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})

COMPRESS_BINARY()
