SET(PLUG_NAME "osgWX")
SET(TARGET_NAME "plug_${PLUG_NAME}")
SET(TARGET_DIR "./modules")


INCLUDE_DIRECTORIES (../include)
INCLUDE_DIRECTORIES (../../sgtLuna/include)

INCLUDE_DIRECTORIES(${WX_INC_DIR})
LINK_DIRECTORIES (${WX_LIB_DIR})

ADD_DEFINITIONS(-DPLUG_LIBRARY)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(${OSG_FLAGS})
ADD_DEFINITIONS(${WX_FLAGS})

FILE(GLOB_RECURSE PUBLIC_HEADERS "../include/*.h")

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp" )

ADD_MSVC_PRECOMPILED_HEADER("plug_common.h" "plug_common.cpp" SOURCE_FILES)

ADD_LIBRARY (${TARGET_NAME} SHARED ${PUBLIC_HEADERS} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${TARGET_NAME} sgtLuna ${LUA_LIBS} ${OSG_LIBS} ${WX_LIBS} OpenGL32.lib GLU32.lib)  

# step needed for the generation of the XML documentation:
SET(INTF_FILES)
# LIST(APPEND INTF_FILES "${OSG_INC_DIR}")
ADD_FILES(INTF_FILES "../include/plug_extensions.h")
ADD_FILES(INTF_FILES "../include/GraphicsWindowWX.h")
ADD_FILES(INTF_FILES "../interface/helpers.h")

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES 
  OUTPUT_NAME "${PLUG_NAME}"
	PREFIX ""
	IMPORT_PREFIX "plug_"
	SUFFIX ".sgp")

SET(DOXY_PREDEFINED OSG_EXPORT GL_APIENTRY OSG_USE_FLOAT_BOUNDINGSPHERE OSG_USE_FLOAT_BOUNDINGBOX OSG_USE_REF_PTR_IMPLICIT_OUTPUT_CONVERSION)
# SET(FILE_PATTERNS "*/osg/*")

GENERATE_REFLECTION(${TARGET_NAME} INTF_FILES)

INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})

COMPRESS_BINARY()

# INSTALL_PDB(${TARGET_NAME} "modules/")


