SET(PLUG_NAME "wx")
SET(TARGET_NAME "plug_${PLUG_NAME}")

INCLUDE_DIRECTORIES (../include)
INCLUDE_DIRECTORIES (../../sgtLuna/include)

INCLUDE_DIRECTORIES(${WX_INC_DIR})
LINK_DIRECTORIES (${WX_LIB_DIR})

ADD_DEFINITIONS(-DPLUG_LIBRARY)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(${WX_FLAGS})

FILE(GLOB_RECURSE PUBLIC_HEADERS "../include/*.h")

FILE(GLOB_RECURSE SOURCE_FILES "*.cpp" )

ADD_MSVC_PRECOMPILED_HEADER("plug_common.h" "plug_common.cpp" SOURCE_FILES)

IF(WIN32)
SET(RESSOURCE_FILES wx_ressources.rc)
ENDIF()

ADD_LIBRARY (${TARGET_NAME} SHARED ${PUBLIC_HEADERS} ${SOURCE_FILES} ${RESSOURCE_FILES})

TARGET_LINK_LIBRARIES(${TARGET_NAME} sgtLuna ${LUA_LIBS} ${WX_LIBS} ${OSG_LIBS} ${BOOST_LIBS})  

# INSTALL(TARGETS ${TARGET_NAME}
# 	RUNTIME DESTINATION ${TARGET_DIR}
# 	LIBRARY DESTINATION ${TARGET_DIR})

# step needed for the generation of the XML documentation:
SET(INTF_FILES)
LIST(APPEND INTF_FILES "${CMAKE_CURRENT_SOURCE_DIR}/../interface/wx")
ADD_FILES(INTF_FILES "../include/wx_enums.h")
ADD_FILES(INTF_FILES "../include/wx_events.h")
ADD_FILES(INTF_FILES "../include/wx_defines.h")
ADD_FILES(INTF_FILES "../interface/helpers.h")
ADD_FILES(INTF_FILES "../include/wx_extensions.h")

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES 
	OUTPUT_NAME "${PLUG_NAME}"
	PREFIX ""
	SUFFIX ".sgp")

SET(INCLUDE_PATH ${WX_INC_DIR})
SET(DOXY_PREDEFINED "_LARGE_FILES=1 __WXMSW__ WXDLLIMPEXP_RICHTEXT=  WXDLLIMPEXP_CORE= ")

GENERATE_REFLECTION(${TARGET_NAME} INTF_FILES)

COMPRESS_BINARY()
# INSTALL_PDB(${TARGET_NAME} "modules/")
