SET(TARGET_NAME "proland-core-example")
SET(TARGET_DIR "./")

# INCLUDE_DIRECTORIES(../../sgtLuna/include)
INCLUDE_DIRECTORIES(../../ork/libraries)
INCLUDE_DIRECTORIES(../../ork)

INCLUDE_DIRECTORIES(${PTHREADS_INC_DIR})
LINK_DIRECTORIES(${PTHREADS_LIB_DIR})

INCLUDE_DIRECTORIES(${GLEW_INC_DIR})
LINK_DIRECTORIES(${GLEW_LIB_DIR})

INCLUDE_DIRECTORIES(${GLUT_INC_DIR})
LINK_DIRECTORIES(${GLUT_LIB_DIR})

INCLUDE_DIRECTORIES(${ATB_INC_DIR})
LINK_DIRECTORIES(${ATB_LIB_DIR})

INCLUDE_DIRECTORIES(../sources/core)

ADD_DEFINITIONS("-D_CRT_SECURE_NO_WARNINGS" "-DTIXML_USE_STL")

ADD_DEFINITIONS("-DORK_API=__declspec(dllimport)")
ADD_DEFINITIONS("-DPROLAND_API=__declspec(dllimport)")


FILE(GLOB_RECURSE SOURCE_FILES "core/*.cpp" )

ADD_EXECUTABLE(${TARGET_NAME} ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(${TARGET_NAME} proland ork ${PTHREADS_LIBS} ${ATB_LIBS})

INSTALL(TARGETS ${TARGET_NAME}
	RUNTIME DESTINATION ${TARGET_DIR}
	LIBRARY DESTINATION ${TARGET_DIR})

COMPRESS_BINARY()
